Updated Wang data

--- a/final/chromatic.tex
+++ b/final/chromatic.tex
@@ -689,7 +689,7 @@ for orders greater than or equal to \(20\) (due to increased runtime duration).
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=5in]{wang_states}
+  \includegraphics[width=5in]{wang_calls}
   \caption{Christofides algorithm with Wang improvements mean number of states.}
   \label{fig:wangstates}
 \end{figure}
